fix bug in frontend
