# src/Infrastructure/Persistence/ApplicationDbContext.cs
@@ -1,6 +1,5 @@
 ﻿using Application.Common.Interfaces;
-using Domain.Employee;
-using Domain.TimeEntry;
+using Domain.Entities;
 using Microsoft.EntityFrameworkCore;
 
 namespace Infrastructure.Persistence;
@@ -15,6 +14,14 @@ public sealed class ApplicationDbContext : DbContext, IApplicationDbContext
     public DbSet<EmployeeDto> Employees { get; set; }
 
     public DbSet<TimeEntryDto> TimeEntries { get; set; }
+
+    protected override void OnModelCreating(ModelBuilder modelBuilder)
+    {
+        modelBuilder.Entity<TimeEntryDto>()
+            .HasOne(te => te.Employee)
+            .WithMany(e => e.TimeEntries)
+            .HasForeignKey(te => te.EmployeeId);
+    }
 
     public override async Task<int> SaveChangesAsync(CancellationToken cancellationToken = default)
     {
